[gd_scene load_steps=16 format=3 uid="uid://b0mnburkxvd5f"]

[ext_resource type="Script" uid="uid://ddbh2fyp7rcpy" path="res://scripts/player.gd" id="1_1hmtu"]
[ext_resource type="Material" uid="uid://c5x6nknt4of7b" path="res://assets/graphics/shaders/body_shader_material.tres" id="2_1murt"]
[ext_resource type="Texture2D" uid="uid://bte420r22u0n6" path="res://assets/graphics/sprites/characters/Shadow1.png" id="2_ovg4i"]
[ext_resource type="SpriteFrames" uid="uid://be0yocojgyxw1" path="res://assets/graphics/sprites_frame/clothing/male_0_animation.tres" id="3_8akj5"]
[ext_resource type="SpriteFrames" uid="uid://byi6yhhmhnmej" path="res://assets/graphics/sprites_frame/eyes/eyes_animation.tres" id="4_5sj0x"]
[ext_resource type="SpriteFrames" uid="uid://cjpsk3kugtpu2" path="res://assets/graphics/sprites_frame/rear_hair/male_0_animation.tres" id="4_8akj5"]
[ext_resource type="Material" uid="uid://bdak6e05f1nrt" path="res://assets/graphics/shaders/eyes_shader_material.tres" id="4_ovg4i"]
[ext_resource type="SpriteFrames" uid="uid://df0b6wabjt66y" path="res://assets/graphics/sprites_frame/accessory/male_0_animation.tres" id="6_8akj5"]
[ext_resource type="Material" uid="uid://7je8f460qdlc" path="res://assets/graphics/shaders/hair_shader_material.tres" id="6_ovg4i"]
[ext_resource type="SpriteFrames" uid="uid://blgci2idcf3l4" path="res://assets/graphics/sprites_frame/body/male_animation.tres" id="7_7wli1"]
[ext_resource type="AudioStream" uid="uid://dpur6ye801t4p" path="res://assets/audio/sounds/Slash7.ogg" id="11_7wli1"]
[ext_resource type="SpriteFrames" uid="uid://dpswfu23gna8k" path="res://assets/graphics/sprites_frame/skill/Enchanteur_animation.tres" id="11_xy2vv"]
[ext_resource type="SpriteFrames" uid="uid://cuayu204nvxum" path="res://assets/graphics/sprites_frame/skill/Guerrier.tres" id="12_xy2vv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hmtu"]
radius = 17.0
height = 48.0

[sub_resource type="SpriteFrames" id="SpriteFrames_uq5va"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_1hmtu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_1hmtu")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 9)
texture = ExtResource("2_ovg4i")

[node name="Skeleton" type="Node2D" parent="."]

[node name="Body" type="AnimatedSprite2D" parent="Skeleton"]
material = ExtResource("2_1murt")
sprite_frames = ExtResource("7_7wli1")
animation = &"attack_up"

[node name="Eyes" type="AnimatedSprite2D" parent="Skeleton"]
material = ExtResource("4_ovg4i")
sprite_frames = ExtResource("4_5sj0x")
animation = &"idle_down"

[node name="Clothing" type="AnimatedSprite2D" parent="Skeleton"]
sprite_frames = ExtResource("3_8akj5")
animation = &"walk_up"

[node name="RearHair" type="AnimatedSprite2D" parent="Skeleton"]
material = ExtResource("6_ovg4i")
sprite_frames = ExtResource("4_8akj5")
animation = &"idle_down"

[node name="FrontHair" type="AnimatedSprite2D" parent="Skeleton"]
material = ExtResource("6_ovg4i")
sprite_frames = SubResource("SpriteFrames_uq5va")
animation = &"idle_down"

[node name="Accessory" type="AnimatedSprite2D" parent="Skeleton"]
sprite_frames = ExtResource("6_8akj5")
animation = &"idle_down"

[node name="SkillAnimation" type="AnimatedSprite2D" parent="Skeleton"]
texture_filter = 2
sprite_frames = ExtResource("11_xy2vv")
animation = &"attack_down"

[node name="WeaponAnimation" type="AnimatedSprite2D" parent="Skeleton"]
sprite_frames = ExtResource("12_xy2vv")
animation = &"attack_down"

[node name="Name" type="Label" parent="Skeleton"]
z_index = 10
texture_filter = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = -60.0
offset_right = 23.5
offset_bottom = -37.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_7wli1")
